--- a/lib/db/config/config.json
+++ b/lib/db/config/config.json
@@ -16,9 +16,9 @@
     "logging": false
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
+    "username": "mysql",
+    "password": "mysql",
+    "database": "testdb",
     "host": "127.0.0.1",
     "dialect": "mysql",
     "logging": false
