--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "lib": "lib"
   },
   "scripts": {
-    "dev": "nodemon ./bin/www"
+    "dev": "cross-env NODE_ENV=development nodemon ./bin/www",
+    "prod": "cross-env NODE_ENV=production nodemon ./bin/www"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "config": "^3.3.9",
+    "cross-env": "^7.0.3",
     "express": "^4.18.2",
     "mysql2": "^3.0.1",
     "sequelize": "^6.28.0"
