--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "config": "^3.3.9",
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
+    "joi": "^17.7.0",
     "mysql2": "^3.0.1",
     "sequelize": "^6.28.0"
   },
